tests/NormalTests/paczka1/fuzzy1/19199468.err
Error in line 4: LmO A310 66,18
Error in line 1: kNGzK A678 8,9
Error in line 9: LmO A310 58,6
Error in line 17: S436 A81 54,5
Error in line 19: LmO A81 62,9
Error in line 13: kNGzK A81 61,0
Error in line 30: Rvr1t3 A678 33,6
Error in line 34: st5fLTwjK A678 16,8
